src/main/java/com/example/sb_assign_16_05_23/errors/BadRequestException.java
package com.example.sb_assign_16_05_23.errors;

public class BadRequestException extends RuntimeException{
    public BadRequestException(String message) {
        super(message);
    }
}
